src/components/Page/style.css
div.page {
  display: block;
  text-align: center;
  overflow: auto;
  width: 100%;
  height: calc(100% - 22px);
  padding: 10px;
  border: 1px black solid;
  position: absolute;
  background-color: #ffffff;
}

div.left-side > div.page {
  border-radius: 20px 0 0 20px;
}

div.right-side > div.page {
  border-radius: 0 20px 20px 0;
}

div.left-side.active, div.right-side > div.page.flipped {
  transform: rotateY(180deg);
  z-index: 1;
  border-radius: 20px 0 0 20px;
}

div.right-side.active, div.left-side > div.page.flipped {
  transform: rotateY(-180deg);
  z-index: 1;
  border-radius: 0 20px 20px 0;
}

div.left-side > div.page.unveiled {
  margin-left: calc(100% + 20px);
  border-radius: 0 20px 20px 0;
}

div.right-side > div.page.unveiled {
  transform: translateX(calc(-100% + 2px));
  border-radius: 20px 0 0 20px;
}

.nav-tab {
  transition: all 1s ease-in-out;
}

.nav-tab.left {
  transform-origin: 40vw;
}

.nav-tab.left.active {
  transform: rotateY(180deg);
}

.nav-tab.right {
  transform-origin: calc(-40vw + 72px);
}

.nav-tab.right.active {
  transform: rotateY(-180deg);
}

div.page.hidden {
  display: none;
}

section {
  border: 1px black solid;
}

div > p {
  text-align: left;
}

@media screen and (max-width: 1200px) {
  .nav-tab.left {
    transform-origin: 45vw;
  }

  .nav-tab.right {
    transform-origin: calc(-45vw + 24px);
  }
}

